deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: sovryn-graph-wrapper
  name: sovryn-graph-wrapper
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sovryn-graph-wrapper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sovryn-graph-wrapper
    spec:
      containers:
      - image: sovryn/sovryn-graph-wrapper
        imagePullPolicy: Always
        name: sovryn-graph-wrapper
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: sovryn-graph-wrapper
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:500674654096:certificate/4d342e91-c855-47ea-9c40-dea361b19d4f
spec:
  selector:
    app: sovryn-graph-wrapper
  ports:
    - port: 443
      targetPort: 3000
  type: LoadBalancer
