ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sovryn-graph-wrapper-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.hostname
    http:
      paths:
      - backend:
          service:
            name: sovryn-graph-wrapper
            port:
              number: 443
        path: /
        pathType: Prefix
